# embedded-hal

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.stable.toml  Cargo.toml  MIGRATING-0.2-1.0.md  README.md  rustfmt.toml  search-index.js
.github/: CODEOWNERS  bors.toml
.github/workflows/: changelog.yml  ci-async.yml  ci-bus.yml  ci.yml  clippy-async.yml  clippy-bus.yml  clippy.yml  rustdoc.yml  rustfmt.yml  test.yml
ci/: after_success.sh  install.sh  script.sh
docs/: how-to-add-a-new-trait.md  migrating-from-0.2-to-1.0.md  msrv.md  version-policy.md
embedded-can/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
embedded-can/src/: asynch.rs  asynchronous.rs  blocking.rs  id.rs  lib.rs  nb.rs
embedded-hal/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
embedded-hal-async/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
embedded-hal-async/src/: adc.rs  delay.rs  digital.rs  i2c.rs  lib.rs  serial.rs  spi.rs
embedded-hal-bus/: CHANGELOG.md  Cargo.toml  README.md
embedded-hal-bus/src/: i2c.rs  lib.rs  spi.rs  util.rs
embedded-hal-bus/src/asynch/: mod.rs
embedded-hal-bus/src/asynch/spi/: exclusive.rs  mod.rs
embedded-hal-bus/src/i2c/: atomic.rs  critical_section.rs  mod.rs  mutex.rs  mutex_trait.rs  mutex_traits.rs  rc.rs  refcell.rs
embedded-hal-bus/src/spi/: atomic.rs  critical_section.rs  exclusive.rs  mod.rs  mutex.rs  mutex_trait.rs  mutex_traits.rs  rc.rs  refcell.rs  shared.rs
embedded-hal-delay/: Cargo.toml  README.md
embedded-hal-delay/src/: lib.rs
embedded-hal-digital/: Cargo.toml  README.md
embedded-hal-digital/src/: lib.rs
embedded-hal-i2c/: Cargo.toml  README.md
embedded-hal-i2c/src/: lib.rs
embedded-hal-nb/: CHANGELOG.md  Cargo.toml  README.md
embedded-hal-nb/src/: lib.rs  serial.rs  spi.rs
embedded-hal-serial/: Cargo.toml  README.md
embedded-hal-serial/src/: lib.rs
embedded-hal-shared/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
embedded-hal-shared/src/: lib.rs
embedded-hal-spi/: Cargo.toml  README.md
embedded-hal-spi/src/: lib.rs
embedded-hal-timer/: Cargo.toml  README.md
embedded-hal-timer/src/: lib.rs
embedded-hal/src/: adc.rs  delay.rs  digital.rs  i2c.rs  lib.rs  mmc.rs  pwm.rs  sai.rs  serial.rs  spi.rs
embedded-hal/src/mmc/: bus_width.rs  card_mode.rs  card_type.rs  command.rs  fifo_status.rs  reset.rs  response.rs  tuning.rs
embedded-hal/src/mmc/command/: types.rs
embedded-hal/src/mmc/response/: mode.rs  types.rs
embedded-io/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
embedded-io-adapters/: CHANGELOG.md  Cargo.toml  README.md
embedded-io-adapters/src/: digest.rs  embedded_storage.rs  embedded_storage_async.rs  fmt.rs  futures_03.rs  lib.rs  std.rs  tokio_1.rs  unblock.rs
embedded-io-async/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
embedded-io-async/src/: lib.rs
embedded-io-async/src/impls/: blanket.rs  boxx.rs  mod.rs  slice_mut.rs  slice_ref.rs  vec.rs  vec_deque.rs
embedded-io/src/: adapters.rs  cursor.rs  lib.rs
embedded-io/src/impls/: blanket.rs  boxx.rs  mod.rs  slice_mut.rs  slice_ref.rs  vec.rs  vec_deque.rs
embedded_hal/: PwmPin.t.html  index.html  sidebar-items.js  trait.PwmPin.html
embedded_hal/blocking/: index.html  sidebar-items.js
embedded_hal/blocking/delay/: DelayMs.t.html  DelayUs.t.html  index.html  sidebar-items.js  trait.DelayMs.html  trait.DelayUs.html
embedded_hal/blocking/i2c/: WriteRead.t.html  index.html  sidebar-items.js  trait.Read.html  trait.Write.html  trait.WriteRead.html
embedded_hal/blocking/serial/: index.html  sidebar-items.js  trait.Write.html
embedded_hal/blocking/spi/: Transfer.t.html  Write.t.html  index.html  sidebar-items.js  trait.Transfer.html  trait.Write.html
embedded_hal/digital/: OutputPin.t.html  index.html  sidebar-items.js  trait.OutputPin.html
embedded_hal/prelude/: index.html
embedded_hal/serial/: index.html  sidebar-items.js  trait.Read.html  trait.Write.html
embedded_hal/spi/: FullDuplex.t.html  Phase.t.html  Polarity.t.html  enum.Phase.html  enum.Polarity.html  index.html  sidebar-items.js  struct.Mode.html  trait.FullDuplex.html
embedded_hal/timer/: CountDown.t.html  Periodic.t.html  index.html  sidebar-items.js  trait.CountDown.html  trait.Periodic.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
nb/: enum.Error.html  index.html  macro.block!.html  macro.block.html  sidebar-items.js  type.Result.html
src/: adc.rs  can.rs  capture.rs  delay.rs  digital.rs  dma.rs  fmt.rs  i2c.rs  i2s.rs  lib.rs  mutex.rs  prelude.rs  pwm.rs  qei.rs  rng.rs  serial.rs  spi.rs  storage.rs  timer.rs  watchdog.rs
src/adc/: mod.rs  nb.rs
src/asynchronous/: gpio.rs  i2c.rs  io.rs  mod.rs  prelude.rs  serial.rs  spi.rs  timer.rs
src/asynchronous/gpio/: get.rs  set.rs
src/asynchronous/i2c/: begin_read.rs  begin_write.rs  initialize.rs
src/asynchronous/io/: flush.rs  read.rs  read_exact.rs  shutdown.rs  write.rs  write_all.rs
src/blocking/: can.rs  dac.rs  delay.rs  digital.rs  i2c.rs  i2s.rs  mod.rs  pwm.rs  qei.rs  rng.rs  serial.rs  spi.rs  watchdog.rs
src/can/: blocking.rs  id.rs  mod.rs  nb.rs
src/capture/: mod.rs  nb.rs
src/delay/: mod.rs
src/digital/: blocking.rs  mod.rs  v1.rs  v1_compat.rs  v2.rs  v2_compat.rs
src/embedded_hal/: digital.rs.html  lib.rs.html  prelude.rs.html  serial.rs.html  spi.rs.html  timer.rs.html
src/futures/: adc.rs  capture.rs  delay.rs  digital.rs  i2c.rs  mod.rs  rng.rs  serial.rs  spi.rs  timer.rs
src/i2c/: blocking.rs  mod.rs
src/nb/: adc.rs  capture.rs  lib.rs.html  mod.rs  rng.rs  serial.rs  spi.rs  timer.rs
src/nonblocking/: adc.rs  capture.rs  mod.rs  rng.rs  timer.rs
src/pwm/: blocking.rs  mod.rs
src/qei/: blocking.rs  mod.rs
src/serial/: blocking.rs  mod.rs  nb.rs
src/spi/: blocking.rs  mod.rs  nb.rs
src/timer/: mod.rs  nb.rs
src/watchdog/: mod.rs
(+21 files in other folders)
