[package]
authors = [
  "The Embedded HAL Team <embedded-hal@teams.rust-embedded.org>",
  "Jorge Aparicio <jorge@japaric.io>",
  "Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"
]
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
description = " A Hardware Abstraction Layer (HAL) for embedded systems "
documentation = "https://docs.rs/embedded-hal"
edition = "2018"
keywords = ["hal", "IO"]
license = "MIT OR Apache-2.0"
name = "embedded-hal"
readme = "README.md"
repository = "https://github.com/rust-embedded/embedded-hal"
version = "1.0.0-alpha.4" # remember to update html_root_url

[dependencies]
nb = "1"

[dev-dependencies.stm32f1]
version = "0.12"
features = ["stm32f103", "rt"]
