[package]
authors = [
  "The Embedded HAL Team <embedded-hal@teams.rust-embedded.org>",
  "Jorge Aparicio <jorge@japaric.io>",
  "Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"
]
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
description = " A Hardware Abstraction Layer (HAL) for embedded systems "
documentation = "https://docs.rs/embedded-hal"
keywords = ["hal", "IO"]
license = "MIT OR Apache-2.0"
name = "embedded-hal"
readme = "README.md"
repository = "https://github.com/rust-embedded/embedded-hal"
version = "0.2.7"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.nb]
version = "0.1.3"

[dev-dependencies]
stm32f30x = "0.8.0"
futures = "0.1.17"

[features]
unproven = ["nb/unstable"]

[package.metadata.docs.rs]
features = ["unproven"]
