[package]
name = "embedded-can"
version = "0.4.1"
edition = "2021"

description = "HAL traits for Controller Area Network (CAN) devices."
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/embedded-can"
keywords = ["hal", "IO"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-embedded/embedded-hal"

[dependencies]
nb = "1"

[features]
async = []
