[package]
authors = [
  "The Embedded HAL Team and Contributors <embedded-hal@teams.rust-embedded.org>",
]
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
description = "An asynchronous Hardware Abstraction Layer (HAL) for embedded systems"
documentation = "https://docs.rs/embedded-hal-async"
edition = "2021"
keywords = ["hal", "IO"]
license = "MIT OR Apache-2.0"
name = "embedded-hal-async"
readme = "README.md"
repository = "https://github.com/rust-embedded/embedded-hal"
version = "1.0.0"
rust-version = "1.75"

[features]
defmt-03 = ["dep:defmt-03", "embedded-hal/defmt-03"]

[dependencies]
embedded-hal = { version = "1.0.0", path = "../embedded-hal" }
defmt-03 = { package = "defmt", version = "0.3", optional = true }
