[package]
name = "embedded-hal"
version = "1.0.0-rc1"
authors = ["Rust Embedded Working Group <hal@teams.rust-embedded.org>"]
edition = "2018"
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
description = " A Hardware Abstraction Layer (HAL) for embedded systems "
documentation = "https://docs.rs/embedded-hal"
keywords = ["hal", "IO"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-embedded/embedded-hal"

[dependencies.embedded-hal-delay]
path = "../embedded-hal-delay"
# version = "1.0"

[dependencies.embedded-hal-digital]
path = "../embedded-hal-digital"
# version = "1.0"

[dependencies.embedded-hal-i2c]
path = "../embedded-hal-i2c"
# version = "1.0"

[dependencies.embedded-hal-serial]
path = "../embedded-hal-serial"
# version = "1.0"

[dependencies.embedded-hal-spi]
path = "../embedded-hal-spi"
# version = "1.0"

[dependencies.embedded-hal-timer]
path = "../embedded-hal-timer"
# version = "1.0"

[dev-dependencies]
nb = "0.1.1"
stm32f3 = { version = "0.8", features = ["stm32f303", "rt"] }
futures = "0.1.17"
