[package]
name = "embedded-io-adapters"
version = "0.6.1"
edition = "2021"
rust-version = "1.60"
description = "Adapters between the `embedded-io` traits and other I/O traits"
repository = "https://github.com/rust-embedded/embedded-hal"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]

[features]
std = ["embedded-io/std"]
tokio-1 = ["std", "dep:tokio", "dep:embedded-io-async", "embedded-io-async?/std"]
futures-03 = ["std", "dep:futures", "dep:embedded-io-async", "embedded-io-async?/std"]
embedded-storage = ["dep:embedded-storage"]
embedded-storage-async = ["embedded-storage", "dep:embedded-storage-async", "dep:embedded-io-async"]
defmt-03 = ["dep:defmt-03"]

[dependencies]
embedded-io = { version = "0.6", path = "../embedded-io" }
embedded-io-async = { version = "0.6.1", path = "../embedded-io-async", optional = true }

futures = { version = "0.3.21", features = ["std"], default-features = false, optional = true }
tokio = { version = "1", features = ["io-util"], default-features = false, optional = true }
embedded-storage = { git = "https://github.com/rust-embedded-community/embedded-storage.git", optional = true }
embedded-storage-async = { git = "https://github.com/rust-embedded-community/embedded-storage.git", optional = true }
defmt-03 = { package = "defmt", version = "0.3", optional = true }

[package.metadata.docs.rs]
features = ["std", "tokio-1", "futures-03"]
rustdoc-args = ["--cfg", "docsrs"]
