[package]
name = "embedded-io-async"
version = "0.5.0"
edition = "2021"
description = "Async embedded IO traits"
repository = "https://github.com/rust-embedded/embedded-hal"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]

[features]
std = ["alloc", "embedded-io/std"]
alloc = ["embedded-io/alloc"]
defmt-03 = ["dep:defmt-03", "embedded-io/defmt-03"]

[dependencies]
embedded-io = { version = "0.5", path = "../embedded-io" }
defmt-03 = { package = "defmt", version = "0.3", optional = true }

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--cfg", "docsrs"]
